# rust-template-tokio

./: Cargo.toml  README.md  justfile
src/: main.rs
src/utils/: error.rs  mod.rs  tracing.rs
